# jx-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  settings.json  settings.json.example  抽卡平台-设计方案.md
.claude/: launch.json
dashboard/: .thumbnail  JX Agent Console v1 (Marketing).html  api.js  app.jsx  chrome.jsx  dashboard.html  primitives.jsx
dashboard/components/: Drawer.jsx
dashboard/views/: channels.jsx  chat.jsx  gacha.jsx  growth.jsx  heartbeat.jsx  memory.jsx  overview.jsx  permissions.jsx  persona.jsx  settings.jsx  skill_canvas.jsx  skills.jsx  tools.jsx
memdir/: MEMORY.md
persona/: beliefs.md  examples.md  personality.md  root.md  style.md
persona/core/: _protocol.md  beliefs.md  fewshot_short.md  identity.md  personality.md  style.md
persona/modules/: advisor_methodology.md  fewshot_advisor.md  fewshot_emotion.md  fewshot_roleplay.md  knowledge_timeline.md  style_phrases.md  works_dubbing.md  works_vlog.md
prompts/: compact.md  memory_consolidate.md  memory_extract.md  microcompact.md
prompts/tools/: bash_exec.md  file_read.md  file_write.md  load_persona_module.md  memory_load.md  memory_save.md  skill.md  web_search.md
scripts/: _ark_test_body.json  check_mypy.ps1  gacha_smoke.py  smoke_phase10.py
skills/cantonese/: SKILL.md  structure.json
skills/cantonese/agents/: openai.yaml
skills/cantonese/references/: conversation-guide.md  pronunciation-and-romanization.md
skills/dream/: SKILL.md  structure.json
skills/example-skill/: SKILL.md
skills/gacha/: SKILL.md  structure.json
skills/growth/: SKILL.md  structure.json
skills/humanizer/: README.md  SKILL.md  structure.json
skills/skill-creator/: SKILL.md  structure.json
skills/skill-finder/: SKILL.md  search.md  structure.json
skills/skill-installer/: SKILL.md  structure.json
skills/skill-installer/scripts/: install-skill-from-github.py
skills/teochew/: SKILL.md  structure.json
skills/teochew/agents/: openai.yaml
skills/teochew/references/: conversation-guide.md  pronunciation-and-romanization.md
skills/video-editor/: SKILL.md
skills/wechat-style/: SKILL.md
src/sanshiliu/: __init__.py  __main__.py  bootstrap.py  cli.py
src/sanshiliu/bootstrap/: __init__.py  banner.py  install.py  preflight.py  setup_wizard.py  wechat_setup.py  wire.py
tests/: test_api_growth.py  test_config_skills_dir_env_publish.py  test_db_session_listing.py  test_engine_use_tools.py  test_growth_persona.py  test_growth_runner.py  test_growth_skill.py  test_growth_state.py  test_heartbeat_scheduler.py  test_reply_length_anchor.py  test_shortterm_memory.py  test_skill_installer_dest.py  test_skill_loader_global.py
tests/smoke/: smoke_phase2.py  smoke_phase3.py  smoke_phase4.py  smoke_phase5_6.py
tests/unit/: test_budget.py  test_compact_prompts.py  test_compactor.py  test_context_manager.py  test_engine.py  test_frontmatter.py  test_identity_loader.py  test_identity_watcher.py  test_microcompact.py  test_prompt_builder.py  test_session_summary.py  test_skills.py  test_tool_builtin_bash.py  test_tool_builtin_file_io.py  test_tool_dispatcher.py  test_tool_registry.py  test_web_sse_router.py  test_wechat_queue.py  test_wechat_rate_limit.py  test_wechat_webhook.py  test_wechat_whitelist_safety.py
(+130 files in other folders)
